# lectures

./: .gitignore  README.md
ODE_konspect/: ODE_konspect.tex
edu_tasks/PDE-master/: README.md  graphic_PDE_Kozlov_Popykina.tex  main.cpp
edu_tasks/linear_algebra_and_numerical_integration-master/: CMakeLists.txt  README.md  main.cpp
edu_tasks/taskODE_VM-master/: main.cpp  task06VM.tex
edu_tasks/tkv_CGW/1/: first.tex
edu_tasks/tkv_CGW/3/: temp.py
edu_tasks/visualization-of-distribution-master/: README.md  main.py
math_physics/first/: drawing.pdf_tex  first.tex
mathan/first/: first.aux  first.out  first.tex  first.toc  first1.py  first1.tex  first2.tex  first22.tex  first23.tex  first3.tex  first4.tex  first5.tex  first6.tex  first7.tex
mathan/lec-02/: lec2.tex
mathan/lec-03/: lec3.tex
mathan/lec-04/: lec4.tex
mathan/lec-05/: lec5.tex  time.txt
mathan/lec-05/pics/: fig1.tex  fig10.tex  fig2.tex  fig4.tex  fig5.tex  fig6.tex  fig7.tex  fig8.tex  fig9.tex
mathan/lec-06/: lec6.tex
ode_notes/: ODE_konspect.tex
physnu/: main.tex
qft/: untitled.tex
tkv_CGW/0/: untitled.tex
tkv_CGW/1/: ans1.txt  first.tex
tkv_CGW/2/: second.tex
tkv_CGW/3/: temp.py
tkv_CGW/6/: b0-.py  cgw_6.tex  cgw_6_new.tex  soliton.py
tkv_CGW/9/: untitled2.py
tkv_cgw/3/: cgw3.py
tkv_cgw/6/: kink.py  phase_plane.py  pointss_types.py
tkv_cgw/8/: cgw_8.tex  untitled0.py
tkv_cgw/9/: 9.tex
Мат. анализ/Лекция 01/: first.tex
Мат. анализ/Лекция 2/: lec2.tex
